--- a/_scss/excel.scss
+++ b/_scss/excel.scss
@@ -116,7 +116,7 @@ main#iteration-info {
     }
 
 .pbars { 
-    min-width: 95%; height: 25px; text-align: center;
+    min-width: 95%; height: 25px; text-align: center; display:none;
 
     .progress-bar { 
         display: inline-block; animation: manifest 0.2s ease-out calc(var(--bc) * 1s) forwards; width: 216px; height: 18px; line-height: calc(17.5px); text-align: left; border: 1px solid #333; border-radius: 6px; margin: 7.2px; position: relative; overflow: hidden; background: var(--bar-color) repeating-linear-gradient(45deg, #ffffff88 0, #ffffff88 10px, #ffffffbb 10px, #ffffffbb 20px); box-shadow: inset 2px 2px 0 #fff, inset 2px -2px 0 #fff, inset -2px 2px 0 #fff, inset -2px -2px 0 #fff; opacity: 0; transform: scale(0);
@@ -148,7 +148,7 @@ div.sort-order{
             &::after { content: attr(data-slot); display: block; height: 30px; width: 30px; line-height: 38px; border-radius: 50%; background: #aaa; color: #000; position: absolute; z-index: -1; top: 0; left: -35px; text-indent: 0; text-align: right; padding: 0; font-size: 30px; letter-spacing: -5px; padding-right: 5px; font-weight: bold; color: white; }
             &.drag-sort-active { background: #eee6; color: #3333; border: 2px dashed #aaa6; transition: 0.3s all ease-in-out; transform: scale(0.95); }
             &[data-value='interpolated']::before {
-                background-color:#f001;
+                background-color:#ece7ff;
             }
             &[data-value='stored']::before {
                 background-color:#0f01;
@@ -229,9 +229,38 @@ button.add-record {
     }
 
 }
+#output-panels {
+    position:relative;
+    aside.status-filters {
+        position: absolute;
+        background: #fff;
+        border: 1px solid #BBB;
+        padding: 10px;
+        border-radius: 10px;
+        line-height: 1.7;
+        top: 0;
+        left: 81%;
+        max-width:200px;
+        font-size:14px;
 
+        span {
+            display:block;
+            text-align: center;
+            font-style: italic;
+            padding-bottom:5px;
+            border-bottom:1px solid #aaa;
+            margin-bottom:5px;
+        }
+
+        h2 {
+            font-size:15px;
+            text-align: center;
+            margin: 0;
+        }
+    }
+}
 .output-table { 
-    min-width: 95%; 
+    max-width: 80%; 
 
     a.issue-link,
     a.issue-parent-link { 
@@ -284,20 +313,32 @@ button.add-record {
 }
 td {        
         &:nth-child(-n+2) {
-            width: 15%;
             text-align: left;
         }
         
         &:nth-child(n+3) {
-            width: 5%;
+            width: 4%;
             text-align: right;
         }
 
         &.dim {
             background:#CCC;
         }
+
+        &.interpolated-value {
+            box-shadow: inset 1px 1px 10px #ece7ff, inset 1px -1px 10px #ece7ff, inset -1px 1px 10px #ece7ff, inset -1px -1px 10px #ece7ff;
+        }
+
+
+        i {
+            color:#0005;
+        }
+
+        em {
+            color:#0007;
+        }
 }
-        
+
         th {
             border: 1px solid black;
             background-color: #EEE;
@@ -309,15 +350,19 @@ td {
         
         table.outputTable {
             width: 80%;
-            margin: 10px 10%;
+            margin: 10px 2%;
             border: 1px solid black;
         }
         
         tr > * {
             border-bottom: 1px solid #000;
             border-right: 1px solid gray;
+            padding: 1px 5px;
         }
 
+        tr.obfuscated {
+            display:none;
+        }
 
 /* ANIMATIONS AND @-RULES */
 @keyframes progress { 
@@ -335,11 +380,60 @@ td {
     100% { opacity: 1; transform: scale(1); } 
 }
 
-
+div.extra-details {
+    background:linear-gradient(180deg, #229BD7 0, #229BD7 10px, white 10px, white 100%);
+    border:2px solid #888;
+    padding:22px 16px 16px;
+    border-radius:18px;
+    position:absolute;
+    width:400px;
+    margin-top:16px;
+    display:flex;
+    flex-wrap:wrap;
+    box-shadow:-10px 10px 10px #0006, 10px 10px 10px #0006, 0px 20px 20px #0006;
+    font-size:13px;
+    
+    span {
+        padding:1px 3px;
+    }
+    
+    span:nth-of-type(2n - 1) {
+        flex:1 1 35%;
+        max-width:33%;
+        border-bottom:1px solid #bbb;
+        
+    }
+    
+    span:nth-of-type(2n) {
+        flex:1 1 35%;
+        max-width:67%;
+        border-bottom:1px solid #bbb;
+    }
+    
+    &::after, 
+    &::before {
+        content:'';
+        background-color:transparent;
+        width:25px;
+        height:25px;
+        position:absolute;
+        z-index:50;
+        top:-47px;
+        left:25px;
+        display:block;
+        border: 25px solid transparent;
+        border-bottom:25px solid #229BD7;
+    }
+    
+    &::before {
+        top:-50px;
+        border-bottom:25px solid #888;
+    }
+}
 
 
 aside.sort-key{
-    display:block;
+    display:none;
     position:absolute;
     border:1px solid black;
     border-radius: 8px;
