--- a/public/lib/css/excel.css
+++ b/public/lib/css/excel.css
@@ -238,6 +238,7 @@ main#iteration-info section.form-fields .half-width {
   min-width: 95%;
   height: 25px;
   text-align: center;
+  display: none;
 }
 
 .pbars .progress-bar {
@@ -378,7 +379,7 @@ div.sort-order ul.has-draggable-children li.drag-sort-active {
 }
 
 div.sort-order ul.has-draggable-children li[data-value='interpolated']::before {
-  background-color: #f001;
+  background-color: #ece7ff;
 }
 
 div.sort-order ul.has-draggable-children li[data-value='stored']::before {
@@ -509,8 +510,40 @@ button.add-record {
   color: #fff;
 }
 
+#output-panels {
+  position: relative;
+}
+
+#output-panels aside.status-filters {
+  position: absolute;
+  background: #fff;
+  border: 1px solid #BBB;
+  padding: 10px;
+  border-radius: 10px;
+  line-height: 1.7;
+  top: 0;
+  left: 81%;
+  max-width: 200px;
+  font-size: 14px;
+}
+
+#output-panels aside.status-filters span {
+  display: block;
+  text-align: center;
+  font-style: italic;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #aaa;
+  margin-bottom: 5px;
+}
+
+#output-panels aside.status-filters h2 {
+  font-size: 15px;
+  text-align: center;
+  margin: 0;
+}
+
 .output-table {
-  min-width: 95%;
+  max-width: 80%;
 }
 
 .output-table a.issue-link,
@@ -610,17 +643,29 @@ button.add-record {
 }
 
 td:nth-child(-n+2) {
-  width: 15%;
   text-align: left;
 }
 
 td:nth-child(n+3) {
-  width: 5%;
+  width: 4%;
   text-align: right;
 }
 
 td.dim {
   background: #CCC;
+}
+
+td.interpolated-value {
+  -webkit-box-shadow: inset 1px 1px 10px #ece7ff, inset 1px -1px 10px #ece7ff, inset -1px 1px 10px #ece7ff, inset -1px -1px 10px #ece7ff;
+          box-shadow: inset 1px 1px 10px #ece7ff, inset 1px -1px 10px #ece7ff, inset -1px 1px 10px #ece7ff, inset -1px -1px 10px #ece7ff;
+}
+
+td i {
+  color: #0005;
+}
+
+td em {
+  color: #0007;
 }
 
 th {
@@ -634,13 +679,18 @@ th.dim {
 
 table.outputTable {
   width: 80%;
-  margin: 10px 10%;
+  margin: 10px 2%;
   border: 1px solid black;
 }
 
 tr > * {
   border-bottom: 1px solid #000;
   border-right: 1px solid gray;
+  padding: 1px 5px;
+}
+
+tr.obfuscated {
+  display: none;
 }
 
 /* ANIMATIONS AND @-RULES */
@@ -737,8 +787,65 @@ tr > * {
   }
 }
 
-aside.sort-key {
+div.extra-details {
+  background: linear-gradient(180deg, #229BD7 0, #229BD7 10px, white 10px, white 100%);
+  border: 2px solid #888;
+  padding: 22px 16px 16px;
+  border-radius: 18px;
+  position: absolute;
+  width: 400px;
+  margin-top: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-shadow: -10px 10px 10px #0006, 10px 10px 10px #0006, 0px 20px 20px #0006;
+          box-shadow: -10px 10px 10px #0006, 10px 10px 10px #0006, 0px 20px 20px #0006;
+  font-size: 13px;
+}
+
+div.extra-details span {
+  padding: 1px 3px;
+}
+
+div.extra-details span:nth-of-type(2n - 1) {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 35%;
+          flex: 1 1 35%;
+  max-width: 33%;
+  border-bottom: 1px solid #bbb;
+}
+
+div.extra-details span:nth-of-type(2n) {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 35%;
+          flex: 1 1 35%;
+  max-width: 67%;
+  border-bottom: 1px solid #bbb;
+}
+
+div.extra-details::after, div.extra-details::before {
+  content: '';
+  background-color: transparent;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  z-index: 50;
+  top: -47px;
+  left: 25px;
   display: block;
+  border: 25px solid transparent;
+  border-bottom: 25px solid #229BD7;
+}
+
+div.extra-details::before {
+  top: -50px;
+  border-bottom: 25px solid #888;
+}
+
+aside.sort-key {
+  display: none;
   position: absolute;
   border: 1px solid black;
   border-radius: 8px;
